--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "196eb918-4f6f-4958-a9e4-adbde22f279d"
 authors = ["dsweber2 <david.weber2@protonmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+ScatteringTransform = "eadaac29-8b6b-5395-80fd-9ce36bb46293"
+
 [compat]
 julia = "1"
 
