--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ScatteringTransform = "eadaac29-8b6b-5395-80fd-9ce36bb46293"
 
 [compat]
+Plots = "1"
 julia = "1"
 
 [extras]
